# elo

./: .env  .gitattributes  Cargo.toml  README.md  populate.sh
.git-crypt/keys/default/0/: 0804194C20C052EFAADCEBC167EDC7240617DA53.gpg
.github/workflows/: check.yml
back/: .dockerignore  .env.production  .gitignore  Cargo.toml  Dockerfile  build.sh  deploy.sh  migrate.sh
back/.vim/: lspconfig.lua
back/db/: elo.sqlite
back/migrations/: 20240510161902_initial_setup.sql  20240721112647_game_edit.sql  migrate.sh
back/src/: args.rs  consts.rs  main.rs
back/src/handler/: access.rs  broadcaster.rs  mock.rs  mod.rs  model.rs
back/src/handler/handler/: game.rs  invite.rs  mod.rs  player.rs
back/src/handler/model/: error.rs  mod.rs  push.rs  request.rs  response.rs
back/src/handler/tests/: forbidden.rs  framework.rs  game.rs  invite.rs  mod.rs  player.rs
back/src/mailbox/: error.rs  mailbox.rs  mod.rs
back/src/server/: error.rs  mod.rs  server.rs
back/src/server/layer/: auth.rs  mod.rs
back/src/smtp/: error.rs  mod.rs  model.rs  payload.rs  smtp.rs
back/src/store/: error.rs  mod.rs  model.rs  tests.rs
back/src/store/store/: games.rs  invites.rs  mock.rs  mod.rs  players.rs  tests.rs  users.rs
back/src/types/: mod.rs
back/src/ws/: mod.rs  service.rs
back/src/ws/layer/: message.rs  mod.rs  mode.rs
control/: Cargo.toml
control/src/: broadcaster.rs  lib.rs  message.rs  smtp.rs
control/src/handler/: mod.rs  user.rs
front/: .dockerignore  .env.production  .prettierrc  .prettierrc.yaml  Dockerfile  README.md  build.sh  eslint.config.js  index.html  package.json  vite.config.ts
front/src/: index.css  index.scss  index.tsx  socket.ts  types.ts
front/src/components/: action.css  action.tsx  datepicker.css  datepicker.tsx  error.css  error.tsx  games.css  games.tsx  icon.css  icon.tsx  index.ts  invite.css  invite.tsx  loading.css  loading.tsx  mod.ts  nav.css  nav.tsx  notifications.css  notifications.tsx  ribbon.css  ribbon.tsx  side.css  side.tsx  spinner.css  spinner.tsx  status.css  status.tsx
front/src/components/prompt/: confirm.tsx  delete.tsx  edit.css  edit.tsx  game.css  game.tsx  index.ts  invite.css  invite.tsx  prompt.css  prompt.tsx  register.css  register.tsx  rename.css  rename.tsx
front/src/consts/: index.ts
front/src/page/: error.css  error.tsx  index.tsx  loading.css  loading.tsx  welcome.css  welcome.tsx  wrapper.tsx
front/src/pages/: error.css  error.tsx  index.ts  index.tsx  loading.css  loading.tsx  main.css  main.tsx  prompt.tsx  welcome.css  welcome.tsx  wrapper.tsx
front/src/route/: main.css  main.tsx  mod.ts  router.css  router.tsx
front/src/router/: games.tsx  home.css  home.tsx  index.tsx  invites.css  invites.tsx  leaderboard.css  leaderboard.tsx  loading.css  loading.tsx  player.css  player.tsx
front/src/routes/: game.css  game.tsx  games.tsx  index.tsx  invites.css  invites.tsx  leaderboard.css  leaderboard.tsx  player.css  player.tsx
front/src/socket/: error.ts  index.ts  mock.ts  socket.ts  state.ts  ws.ts
front/src/store/: hooks.tsx  index.ts  message.ts  mock.ts  mod.ts  request.ts  store.ts  types.ts  ws.ts
front/src/types/: index.ts
front/src/util/: index.ts
server/: Cargo.toml
server/src/: args.rs  auth.rs  main.rs  router.rs
server/src/layer/: auth.rs  logger.rs  mod.rs
server/src/service/: message.rs  mod.rs
server/src/ws/: message.rs  mod.rs  mode.rs  model.rs
smtp/: Cargo.toml
smtp/src/: lib.rs
src/: args.rs  main.rs
src/control/: mod.rs
src/control/handler/: mod.rs  user.rs
src/handler/: mod.rs  model.rs
src/handler/handler/: user.rs
src/server/: mod.rs  server.rs
src/server/layer/: logger.rs
src/smtp/: mailbox.rs  mod.rs  model.rs
src/store/: error.rs  mod.rs
src/store/store/: mod.rs  users.rs
src/ws/layer/: mod.rs  mode.rs
src/ws/service/: mod.rs
store/: Cargo.toml
store/migrations/: 20240510161902_initial_setup.sql  20240510161902_users_table.sql  ideas.txt
store/src/: error.rs  lib.rs  model.rs
store/src/store/: mod.rs  users.rs
types/: Cargo.toml
types/src/: lib.rs
ws/: Cargo.toml
ws/src/: lib.rs
ws/src/layer/: mod.rs  payload.rs
ws/src/service/: message.rs
