[workspace]
resolver = "2"
members = [
  "server",
  "store",
  "types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
tracing = "0.1.40"
