[workspace]
resolver = "2"
members = [
  "control",
  "server",
  "store",
  "types",
  "ws",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7.5", features = ["ws"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
hyper = { version = "1.3.1", default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
tokio = "1.37.0"
tracing = "0.1.40"
