[package]
name = "elo"
version = "0.1.0"
edition = "2021"

[features]
default = []
log-spans = ["boile-rs/log-spans"]
local = ["dep:tower-http"]

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
boile-rs = { git = "https://github.com/m-lima/boile-rs", version = "0.1.1", features = ["log", "rt-shutdown"] }
clap = { version = "4.5.4", features = ["derive"] }
hyper = { version = "1.3.1", default-features = false }
lettre = { version = "0.11.7", features = ["tracing", "tokio1-native-tls"] }
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
skillratings = "0.27.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.60"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["cors"], optional = true }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false }
