[package]
name = "server"
version.workspace = true
edition.workspace = true
default-run = "server"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
boile-rs = { git = "https://github.com/m-lima/boile-rs", version = "0.1.1", features = ["log-spans", "rt-shutdown"] }
clap = { version = "4.5.4", features = ["derive"] }
hyper = { version = "1.3.1", default-features = false }
rand = "0.8.5"
rmp-serde = "1.3.0"
serde_json = "1.0.117"
tokio = "1.37.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing-subscriber = { version = "0.3.18", default-features = false }

serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

store = { path = "../store" }
types = { path = "../types" }
