[package]
name = "server"
version.workspace = true
edition.workspace = true
default-run = "server"

[dependencies]
boile-rs = { git = "https://github.com/m-lima/boile-rs", version = "0.1.1", features = ["log-spans", "rt-shutdown"] }
clap = { version = "4.5.4", features = ["derive"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing-subscriber = { version = "0.3.18", default-features = false }

axum = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

control = { path = "../control" }
store = { path = "../store" }
types = { path = "../types" }
ws = { path = "../ws" }
