[package]
name = "smtp"
version.workspace = true
edition.workspace = true

[dependencies]
lettre = { version = "0.11.7", features = ["tracing", "tokio1-native-tls"] }

hyper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

types = { path = "../types" }
